# NDKDemo

./: build.gradle  settings.gradle
app/: build.gradle
app/src/androidTest/java/com/oyp/ndkdemo/: ExampleInstrumentedTest.kt
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: CLogUtils.h  CMakeLists.txt  LeakTracerJni.cpp  native-lib.cpp
app/src/main/cpp/libleaktracer/src/: AllocationHandlers.cpp  MemoryTrace.cpp
app/src/main/java/com/oyp/ndkdemo/: FaceFeatureBean.kt  JNI.kt  MainActivity.kt  Student.kt
app/src/main/res/values/: themes.xml
app/src/main/res/values-night/: themes.xml
app/src/test/java/com/oyp/ndkdemo/: ExampleUnitTest.kt
gradle/wrapper/: gradle-wrapper.properties
leak-tracer-helpers/: 用法.txt
